--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link rel="stylesheet" href="src/styles.css" />
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap&subset=cyrillic"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="dist/styles.css" />
   </head>
 
   <body>
@@ -19,6 +21,6 @@
       </div>
       <textarea id="txtarea" type="text"></textarea>
     </div>
-    <script src="src/app.js" async></script>
+    <script src="dist/bundle.js" async></script>
   </body>
 </html>
