--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap&subset=cyrillic"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/styles.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="dist/styles.css" /> -->
   </head>
 
   <body>
@@ -21,6 +21,6 @@
       </div>
       <textarea id="txtarea" type="text"></textarea>
     </div>
-    <script src="src/bundle.js" async></script>
+    <script src="bundle.js" async></script>
   </body>
 </html>
