chore: functionality of key buttons

--- a/index.html
+++ b/index.html
@@ -5,22 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <!--<link-->
+    <!--href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap&subset=cyrillic"-->
+    <!--rel="stylesheet"-->
+    />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap&subset=cyrillic"
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <!-- <link rel="stylesheet" type="text/css" href="dist/styles.css" /> -->
   </head>
-
   <body>
-    <div class="app">
-      <h1>Keyboard-JS</h1>
-      <div class="keyboard-wrapper">
-        <div class="left-side"></div>
-        <div class="right-side"></div>
-      </div>
-      <textarea id="txtarea" type="text"></textarea>
-    </div>
-    <script src="bundle.js" async></script>
+    <div id="app"></div>
+    <script src="dist/bundle.js" async></script>
   </body>
 </html>
